--- a/package.json
+++ b/package.json
@@ -4,25 +4,30 @@
   "description": "",
   "private": true,
   "scripts": {
-    "esbuildWebExt": "node esbuildWebExt.mjs",
-    "bex": "node esbuildWebExt.mjs",
-    "exb": "node esbuildWebExt.mjs",
-    "watchWebExt": "node esbuildWebExt.mjs watch",
-    "wex": "node esbuildWebExt.mjs watch",
-    "exw": "node esbuildWebExt.mjs watch",
-    "esbuildNodeRtServe": "node esbuildNodeRtServe.mjs",
-    "bns": "node esbuildNodeRtServe.mjs",
-    "nsb": "node esbuildNodeRtServe.mjs",
-    "watchNodeRtServe": "node esbuildNodeRtServe.mjs watch",
-    "wns": "node esbuildNodeRtServe.mjs watch",
-    "nsw": "node esbuildNodeRtServe.mjs watch",
-    "esbuildHoard": "node esbuildHoard.mjs",
-    "bh": "node esbuildHoard.mjs",
-    "hb": "node esbuildHoard.mjs",
-    "watchHoard": "node esbuildHoard.mjs watch",
-    "wh": "node esbuildHoard.mjs watch",
-    "hw": "node esbuildHoard.mjs watch",
-
+    "esbuildWebExt": "node esbuild.mjs webExt build",
+    "bex": "node esbuild.mjs webExt build",
+    "exb": "node esbuild.mjs webExt build",
+    "watchWebExt": "node esbuild.mjs webExt watch",
+    "wex": "node esbuild.mjs webExt watch",
+    "exw": "node esbuild.mjs webExt watch",
+    "esbuildNodeRtServe": "node esbuild.mjs nodeRtServe build",
+    "bns": "node esbuild.mjs nodeRtServe build",
+    "nsb": "node esbuild.mjs nodeRtServe build",
+    "watchNodeRtServe": "node esbuild.mjs nodeRtServe watch",
+    "wns": "node esbuild.mjs nodeRtServe watch",
+    "nsw": "node esbuild.mjs nodeRtServe watch",
+    "esbuildHoard": "node esbuild.mjs hoard build",
+    "bh": "node esbuild.mjs hoard build",
+    "hb": "node esbuild.mjs hoard build",
+    "watchHoard": "node esbuild.mjs hoard watch",
+    "wh": "node esbuild.mjs hoard watch",
+    "hw": "node esbuild.mjs hoard watch",
+    "esbuildAll": "node esbuild.mjs all build",
+    "ba": "node esbuild.mjs all build",
+    "ab": "node esbuild.mjs all build",
+    "watchAll": "node esbuild.mjs all watch",
+    "wa": "node esbuild.mjs all watch",
+    "aw": "node esbuild.mjs all watch",
     "hoard": "node nodeDist/hoard.mjs",
     "h": "node nodeDist/hoard.mjs",
     "nodeServe": "node nodeDist/nodeRuntimeServe.cjs",
@@ -35,6 +40,7 @@
     "cfServe": "npx wrangler dev",
     "cs": "npx wrangler dev",
     "cfDeploy": "npx wrangler deploy",
+    "cfdeploy": "npx wrangler deploy",
     "cfType": "npx wrangler types",
     "upgradeThirdpartyForkDep": "npx rimraf node_modules/telegram node_modules/miniflare node_modules/@libsql/isomorphic-fetch node_modules/mddb && npm install ./thirdparty/telegram/dist ./thirdparty/markdowndb ./thirdparty/cloudflare_workers-sdk/packages/miniflare/package ./thirdparty/libsql_isomorphic-ts/isomorphic-fetch",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -42,7 +48,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "sqlite3": "5.1.6",
     "@cloudflare/vitest-pool-workers": "^0.8.19",
     "@eslint/js": "^9.33.0",
     "@hono/node-server": "^1.18.2",
@@ -80,6 +85,7 @@
     "proxy-agent": "^6.5.0",
     "random-bigint": "^0.0.1",
     "sed-lite": "^1.1.0",
+    "sqlite3": "5.1.6",
     "string.prototype.replaceall": "^1.0.10",
     "telegram": "file:thirdparty/telegram/dist",
     "throttle-debounce": "^5.0.2",
