opt: improve tg hoard

--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "ba": "node esbuild.mjs all build",
     "ab": "node esbuild.mjs all build",
     "watchAll": "node esbuild.mjs all watch",
+    "watch": "node esbuild.mjs all watch",
     "wa": "node esbuild.mjs all watch",
     "aw": "node esbuild.mjs all watch",
+    "w": "node esbuild.mjs all watch",
     "hoard": "node nodeDist/hoard.mjs",
     "h": "node nodeDist/hoard.mjs",
     "nodeServe": "node nodeDist/nodeRuntimeServe.cjs",
@@ -54,6 +56,7 @@
     "@libsql/client": "^0.15.11",
     "@libsql/isomorphic-fetch": "file:thirdparty/libsql_isomorphic-ts/isomorphic-fetch",
     "@stylistic/eslint-plugin": "^5.2.3",
+    "@telegraf/entity": "^0.7.0",
     "@types/async-lock": "^1.4.2",
     "@types/call-bind": "^1.0.5",
     "@types/node": "^24.3.0",
