--- a/.dev.vars.example
+++ b/.dev.vars.example
@@ -3,10 +3,11 @@
 TURSO_DATABASE_URL = "libsql://xxx.turso.io"
 TURSO_AUTH_TOKEN = "xxx"
 HTTP_PROXY = "http://127.0.0.1:8118"
-HTTPS_PROXY = "http://127.0.0.1:8118"
 DEBUG = "proxy-agent,knex:query"
 
 HOARD_DB_BATCH_DEBUG_MODE = "0"
+
+HOARD_DATA_UPDATE_CALLBACK_URL_LIST = "http://127.0.0.1:8568/admin/refreshSiteVersion;http://127.0.0.1:8569/admin/refreshSiteVersion;https://mysite.dev/admin/refreshSiteVersion"
 
 TELEGRAM_API_ID = "11111"
 TELEGRAM_API_HASH = "xxxxxx"
