--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,8 @@
 		"**/bower_components": true,
 		"**/*.code-search": true,
 		"thirdparty/**": true,
-	}
+		"*Dist/**": true,
+		"*.wrangler/**": true,
+	},
+	"search.useIgnoreFiles": false,
 }
