feat: integrate rclone for hoard

--- a/.dev.vars.example
+++ b/.dev.vars.example
@@ -24,3 +24,16 @@ NODE_LOCAL_FS_STATIC_ASSET_ROOT_PATH = "..../staticAsset"
 
 HEAVY_ASSET_WEB_REDIR_URL_PREFIX = "https://my.static.asset.site/sub/path/"
 
+HOARD_RCLONE_CONFIG_TK_HOARD_HEAVY_SYNC_TYPE = 'xxx'
+HOARD_RCLONE_CONFIG_TK_HOARD_HEAVY_SYNC_PROVIDER = 'xxx'
+HOARD_RCLONE_CONFIG_TK_HOARD_HEAVY_SYNC_ENV_AUTH = 'xxx'
+HOARD_RCLONE_CONFIG_TK_HOARD_HEAVY_SYNC_ACCESS_KEY_ID = 'xxx'
+HOARD_RCLONE_CONFIG_TK_HOARD_HEAVY_SYNC_SECRET_ACCESS_KEY = 'xxx'
+HOARD_RCLONE_CONFIG_TK_HOARD_HEAVY_SYNC_ENDPOINT = 'https://xxx'
+HOARD_RCLONE_CONFIG_TK_HOARD_HEAVY_SYNC_LOCATION_CONSTRAINT = 'xxx'
+HOARD_RCLONE_CONFIG_TK_HOARD_HEAVY_SYNC_ACL = 'xxx'
+
+HOARD_RCLONE_TK_HOARD_HEAVY_SOURCE_DIR = 'path/to/xxx'
+HOARD_RCLONE_TK_HOARD_HEAVY_DEST_DIR = 'path/to/xxx'
+
+HOARD_RCLONE_EXECUTABLE = 'path/to/rclone'
