--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "esbuildAll": "node esbuild.mjs all build",
     "ba": "node esbuild.mjs all build",
     "ab": "node esbuild.mjs all build",
+    "b": "node esbuild.mjs all build",
     "watchAll": "node esbuild.mjs all watch",
     "watch": "node esbuild.mjs all watch",
     "wa": "node esbuild.mjs all watch",
@@ -44,7 +45,7 @@
     "cfDeploy": "npx wrangler deploy",
     "cfdeploy": "npx wrangler deploy",
     "cfType": "npx wrangler types",
-    "upgradeThirdpartyForkDep": "npx rimraf node_modules/telegram node_modules/miniflare node_modules/@libsql/isomorphic-fetch node_modules/mddb && npm install ./thirdparty/telegram/dist ./thirdparty/markdowndb ./thirdparty/cloudflare_workers-sdk/packages/miniflare/package ./thirdparty/libsql_isomorphic-ts/isomorphic-fetch",
+    "upgradeThirdpartyForkDep": "npx rimraf node_modules/telegram node_modules/rclone.js node_modules/miniflare node_modules/@libsql/isomorphic-fetch node_modules/mddb && npm install ./thirdparty/rclone.js && npm install ./thirdparty/telegram/dist ./thirdparty/markdowndb ./thirdparty/cloudflare_workers-sdk/packages/miniflare/package ./thirdparty/libsql_isomorphic-ts/isomorphic-fetch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -55,7 +56,6 @@
     "@hono/node-server": "^1.18.2",
     "@libsql/client": "^0.15.11",
     "@libsql/isomorphic-fetch": "file:thirdparty/libsql_isomorphic-ts/isomorphic-fetch",
-    "@libsql/linux-x64-gnu": "^0.5.22",
     "@stylistic/eslint-plugin": "^5.2.3",
     "@telegraf/entity": "^0.7.0",
     "@types/async-lock": "^1.4.2",
@@ -87,6 +87,7 @@
     "p-retry": "^6.2.1",
     "proxy-agent": "^6.5.0",
     "random-bigint": "^0.0.1",
+    "rclone.js": "file:thirdparty/rclone.js",
     "sed-lite": "^1.1.0",
     "sqlite3": "5.1.6",
     "string.prototype.replaceall": "^1.0.10",
