--- a/package.json
+++ b/package.json
@@ -45,9 +45,13 @@
     "cfDeploy": "npx wrangler deploy",
     "cfdeploy": "npx wrangler deploy",
     "cfType": "npx wrangler types",
-    "pull": "git pull && git submodule foreach \"( git checkout main || git checkout master ) && echo ======= && git rev-parse --show-toplevel && git log -1 && echo =======\" && git submodule foreach \"git pull\" && git pull --recurse-submodules",
+    "pull": "git pull && git submodule foreach \"( git checkout main || git checkout master ) && echo ======= && git rev-parse --show-toplevel && git log -1 && echo =======\" && git submodule foreach \"( git stash push package-lock.json || true ) && ( git stash push pnpm-lock.yaml || true ) && git pull\" && git pull --recurse-submodules",
     "buildThirdpartyForkDep": "pushd \"thirdparty/telegram\" && npm install && npm run buildForTk && popd && pushd \"thirdparty/markdowndb\" && npm install && npm run buildForTk && popd && pushd \"thirdparty/cloudflare_workers-sdk\" && npx --yes pnpm install && npx --yes pnpm --dir ./packages/miniflare run buildForTk && popd",
+    "b3": "npm run buildThirdpartyForkDep",
+    "3b": "npm run buildThirdpartyForkDep",
     "upgradeBuiltThirdpartyForkDep": "npx rimraf node_modules/telegram node_modules/rclone.js node_modules/miniflare node_modules/@libsql/isomorphic-fetch node_modules/mddb && npm install ./thirdparty/rclone.js && npm install ./thirdparty/telegram/dist ./thirdparty/markdowndb ./thirdparty/cloudflare_workers-sdk/packages/miniflare/package ./thirdparty/libsql_isomorphic-ts/isomorphic-fetch",
+    "u3": "npm run upgradeBuiltThirdpartyForkDep",
+    "3u": "npm run upgradeBuiltThirdpartyForkDep",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
