upgrade npm scripts

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "cfdeploy": "npx wrangler deploy",
     "cfType": "npx wrangler types",
     "pull": "git pull && git submodule foreach \"( echo; ) && git rev-parse --show-toplevel && ( git stash push package-lock.json || true ) && ( git stash push pnpm-lock.yaml || true ) && ( git checkout main || git checkout master ) && git pull && ( echo; ) && echo =======\" && git pull --recurse-submodules && git submodule foreach \"( echo; ) && git rev-parse --show-toplevel && ( git checkout main || git checkout master ) && git log -1 && ( echo; ) && echo =======\" && echo root && git status && ( echo; )",
-    "buildThirdpartyForkDep": "pushd \"thirdparty/telegram\" && npm install && npm run buildForTk && popd && pushd \"thirdparty/markdowndb\" && npm install && npm run buildForTk && popd && pushd \"thirdparty/cloudflare_workers-sdk\" && npx --yes pnpm install && npx --yes pnpm --dir ./packages/miniflare run buildForTk && popd",
+    "buildThirdpartyForkDep": "cd \"thirdparty/telegram\" && npm install && npm run buildForTk && cd \"../markdowndb\" && npm install && npm run buildForTk && cd \"../cloudflare_workers-sdk\" && npx --yes pnpm install && npx --yes pnpm --dir ./packages/miniflare run buildForTk && cd ../../../..",
     "b3": "npm run buildThirdpartyForkDep",
     "3b": "npm run buildThirdpartyForkDep",
     "upgradeBuiltThirdpartyForkDep": "npx rimraf node_modules/telegram node_modules/rclone.js node_modules/miniflare node_modules/@libsql/isomorphic-fetch node_modules/mddb && npm install ./thirdparty/rclone.js && npm install ./thirdparty/telegram/dist ./thirdparty/markdowndb ./thirdparty/cloudflare_workers-sdk/packages/miniflare/package ./thirdparty/libsql_isomorphic-ts/isomorphic-fetch",
