feat: updated time logic, reqQuery in rgc, coordinate with tmpl group logic

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,11 @@
 		"**/node_modules": true,
 		"**/bower_components": true,
 		"**/*.code-search": true,
-		"thirdparty/**": true,
+		".markdowndb/**": true,
+		"thirdparty/markdowndb/dist/**": true,
+		// "thirdparty/**": true,
+		"thirdparty/markdowndb/**": false,
+		"thirdparty/cloudflare*/**": true,
 		"*Dist/**": true,
 		"*.wrangler/**": true,
 	},
