--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -19,6 +19,9 @@
       "id": "65f75cd9f94649d7a668de64926d7227"
     }
   ],
+  "version_metadata": {
+    "binding": "CF_VERSION_METADATA"
+  },
   "alias": {
   },
   "dev": {
