--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "knex": "^3.1.0",
     "liquidjs": "^10.21.1",
     "markdown-it": "^14.1.0",
+    "markdown-it-hashtag": "^0.4.0",
     "mddb": "file:thirdparty/markdowndb",
     "mime-types": "^3.0.1",
     "miniflare": "file:thirdparty/cloudflare_workers-sdk/packages/miniflare/package",
