fix and enhance various logic

--- a/.dev.vars.example
+++ b/.dev.vars.example
@@ -38,3 +38,6 @@ HOARD_RCLONE_TK_HOARD_HEAVY_SOURCE_DIR = 'path/to/xxx'
 HOARD_RCLONE_TK_HOARD_HEAVY_DEST_DIR = 'path/to/xxx'
 
 HOARD_RCLONE_EXECUTABLE = 'path/to/rclone'
+
+# UTC+8
+HOARD_METADATA_DATE_TIMEZONE_OFFSET_MINUTE = '480'
