--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,7 @@
     // "maxNodeModuleJsDepth": 2,
     "paths": {
     },
+    "noErrorTruncation": true
   },
   "exclude": ["src/test"],
   "include": ["worker-configuration.d.ts", "src/**/*.ts", "src/**/*.mts", "src/**/*.cts", "node_modules/string.prototype.replaceall/**/*.js", "node_modules/throttle-debounce/**/*.js", "node_modules/input/dist/**/*.js", "node_modules/random-bigint/**/*.js", "node_modules/global-agent/**/*.js", "node_modules/rclone.js/**/*.js", "node_modules/markdown-it-hashtag/**/*.js", "node_modules/uc.micro/**/*.*js"],
