feat: add node.js cloud runtime; deploy to fly.io; allow using DirMeta.cfg to add metadata to directory

--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
     "watchWebExt": "node esbuild.mjs webExt watch",
     "wex": "node esbuild.mjs webExt watch",
     "exw": "node esbuild.mjs webExt watch",
-    "esbuildNodeRtServe": "node esbuild.mjs nodeRtServe build",
-    "bns": "node esbuild.mjs nodeRtServe build",
-    "nsb": "node esbuild.mjs nodeRtServe build",
-    "watchNodeRtServe": "node esbuild.mjs nodeRtServe watch",
-    "wns": "node esbuild.mjs nodeRtServe watch",
-    "nsw": "node esbuild.mjs nodeRtServe watch",
+    "esbuildNodeLocalFsRtServe": "node esbuild.mjs nodeLocalFsRtServe build",
+    "bns": "node esbuild.mjs nodeLocalFsRtServe build",
+    "nsb": "node esbuild.mjs nodeLocalFsRtServe build",
+    "watchNodeLocalFsRtServe": "node esbuild.mjs nodeLocalFsRtServe watch",
+    "wns": "node esbuild.mjs nodeLocalFsRtServe watch",
+    "nsw": "node esbuild.mjs nodeLocalFsRtServe watch",
+    "esbuildNodeCloudRtServe": "node esbuild.mjs nodeCloudRtServe build",
+    "bncs": "node esbuild.mjs nodeCloudRtServe build",
+    "ncsb": "node esbuild.mjs nodeCloudRtServe build",
+    "watchNodeCloudRtServe": "node esbuild.mjs nodeCloudRtServe watch",
+    "wncs": "node esbuild.mjs nodeCloudRtServe watch",
+    "ncsw": "node esbuild.mjs nodeCloudRtServe watch",
     "esbuildHoard": "node esbuild.mjs hoard build",
     "bh": "node esbuild.mjs hoard build",
     "hb": "node esbuild.mjs hoard build",
@@ -33,8 +39,10 @@
     "w": "node esbuild.mjs all watch",
     "hoard": "node nodeDist/hoard.mjs",
     "h": "node nodeDist/hoard.mjs",
-    "nodeServe": "node nodeDist/nodeRuntimeServe.cjs",
-    "ns": "node nodeDist/nodeRuntimeServe.cjs",
+    "nodeServe": "node nodeDist/nodeLocalFsRuntimeServe.cjs",
+    "ns": "node nodeDist/nodeLocalFsRuntimeServe.cjs",
+    "nodeCloudServe": "node nodeDist/nodeCloudRuntimeServe.cjs",
+    "ncs": "node nodeDist/nodeCloudRuntimeServe.cjs",
     "cfBuild": "npx wrangler deploy --dry-run --outdir cfDist",
     "bc": "npx wrangler deploy --dry-run --outdir cfDist",
     "cb": "npx wrangler deploy --dry-run --outdir cfDist",
