--- a/.dev.vars.example
+++ b/.dev.vars.example
@@ -23,6 +23,11 @@ TELEGRAM_PUB_HOARD_DEST_ROOT_PATH = "/path/to/tg_pub_hoard_dest"
 NODE_LOCAL_FS_LIVE_ASSET_ROOT_PATH = "..../liveAsset"
 NODE_LOCAL_FS_STATIC_ASSET_ROOT_PATH = "..../staticAsset"
 
+NODE_CLOUD_RT_LISTEN_HOST = '127.0.0.1'
+NODE_CLOUD_RT_LISTEN_PORT = '8571'
+NODE_LOCAL_FS_RT_LISTEN_HOST = '127.0.0.1'
+NODE_LOCAL_FS_RT_LISTEN_PORT = '8569'
+
 HEAVY_ASSET_WEB_REDIR_URL_PREFIX = "https://my.static.asset.site/sub/path/"
 
 HOARD_RCLONE_CONFIG_TK_HOARD_HEAVY_SYNC_TYPE = 'xxx'
