new npm script: hoardLocal

--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "w": "node esbuild.mjs all watch",
     "hoard": "node nodeDist/hoard.mjs",
     "h": "node nodeDist/hoard.mjs",
+    "hoardLocal": "cross-env PROCENV_HOARD_LOCAL_ONLY=1 node nodeDist/hoard.mjs",
+    "hl": "cross-env PROCENV_HOARD_LOCAL_ONLY=1 node nodeDist/hoard.mjs",
     "nodeServe": "node nodeDist/nodeLocalFsRuntimeServe.cjs",
     "ns": "node nodeDist/nodeLocalFsRuntimeServe.cjs",
     "nodeCloudServe": "node nodeDist/nodeCloudRuntimeServe.cjs",
@@ -81,6 +83,7 @@
     "@types/node": "^24.3.0",
     "async-await-queue": "^2.1.4",
     "async-lock": "^1.4.1",
+    "cross-env": "^10.1.0",
     "dotenv": "^17.2.1",
     "emittery": "^1.2.0",
     "esbuild": "^0.25.9",
