--- a/package.json
+++ b/package.json
@@ -39,10 +39,11 @@
     "w": "node esbuild.mjs all watch",
     "hoard": "node nodeDist/hoard.mjs",
     "h": "node nodeDist/hoard.mjs",
-    "hoardLocal": "cross-env PROCENV_HOARD_LOCAL_ONLY=1 node nodeDist/hoard.mjs",
-    "hl": "cross-env PROCENV_HOARD_LOCAL_ONLY=1 node nodeDist/hoard.mjs",
+    "hoardLocal": "cross-env PROCENV_TK_SUB_MODE=hoardLocalOnly node nodeDist/hoard.mjs",
+    "hl": "cross-env PROCENV_TK_SUB_MODE=hoardLocalOnly node nodeDist/hoard.mjs",
     "nodeServe": "node nodeDist/nodeLocalFsRuntimeServe.cjs",
     "ns": "node nodeDist/nodeLocalFsRuntimeServe.cjs",
+    "g": "cross-env PROCENV_TK_SUB_MODE=genStatic node nodeDist/nodeLocalFsRuntimeServe.cjs",
     "nodeCloudServe": "node nodeDist/nodeCloudRuntimeServe.cjs",
     "ncs": "node nodeDist/nodeCloudRuntimeServe.cjs",
     "cfBuild": "npx wrangler deploy --dry-run --outdir cfDist",
@@ -87,6 +88,7 @@
     "dotenv": "^17.2.1",
     "emittery": "^1.2.0",
     "esbuild": "^0.25.9",
+    "escape-string-regexp": "^5.0.0",
     "eslint": "^9",
     "eslint-config-eslint": "^11",
     "eventemitter3": "^5.0.1",
@@ -106,6 +108,7 @@
     "mime-types": "^3.0.1",
     "miniflare": "file:thirdparty/cloudflare_workers-sdk/packages/miniflare/package",
     "mustache": "^4.2.0",
+    "nano-spawn": "^1.0.3",
     "p-retry": "^6.2.1",
     "proxy-agent": "^6.5.0",
     "random-bigint": "^0.0.1",
