--- a/.dev.vars.example
+++ b/.dev.vars.example
@@ -17,12 +17,12 @@ TELEGRAM_PROXY_PORT = "1080"
 # SHOULD_HOARD_DROP_REMOTE_META_META = "1"
 # SHOULD_HOARD_DROP_REMOTE_FILES_TABLE_INSTEAD_OF_VIEW = "1"
 
-TELEGRAM_HOARD_DEST_ROOT_PATH = "/path/to/tg_hoard_dest"
-TELEGRAM_PUB_HOARD_DEST_ROOT_PATH = "/path/to/tg_pub_hoard_dest"
+TELEGRAM_HOARD_DEST_BASE_PATH = "/path/to/tg_hoard_dest"
+TELEGRAM_PUB_HOARD_DEST_BASE_PATH = "/path/to/tg_pub_hoard_dest"
 
-NODE_LOCAL_FS_LIVE_ASSET_ROOT_PATH = "..../liveAsset"
-NODE_LOCAL_FS_STATIC_ASSET_ROOT_PATH = "..../staticAsset"
-
+NODE_LOCAL_FS_LIVE_ASSET_BASE_PATH = "..../liveAsset"
+NODE_LOCAL_FS_STATIC_ASSET_BASE_PATH = "..../staticAsset"
+NODE_STATIC_GEN_BASE_PATH = "./data/staticGen"
 NODE_CLOUD_RT_LISTEN_HOST = '127.0.0.1'
 NODE_CLOUD_RT_LISTEN_PORT = '8571'
 NODE_LOCAL_FS_RT_LISTEN_HOST = '127.0.0.1'
@@ -51,6 +51,8 @@ PROCENV_HOARD_METADATA_DATE_TIMEZONE_OFFSET_MINUTE = '480'
 # HOARD_METADATA_FIELD_ALIAS_LIST = 'ref:groupType=ref&groupPrimaryLocator;topRef:groupType=topRef&groupPrimaryLocator;tref:groupType=topRef&groupPrimaryLocator;thr:groupType=thread&groupPrimaryLocator;g:groupPrimaryLocator;sl:slugLocator&specifiedLocator;slug:slugLocator&specifiedLocator;tag:declaredTags;tags:declaredTags'
 
 
-HOARD_GIT_LOCAL_BARE_REPO_PATH = '/path/to/repo.git'
+HOARD_GIT_LOCAL_LIVE_ASSET_BARE_REPO_PATH = '/path/to/repo.git'
+HOARD_GIT_LOCAL_STATIC_GEN_BARE_REPO_PATH = '/path/to/static-gen-repo.git'
 
-HOARD_GIT_REMOTE = 'ssh://xxx'
+HOARD_GIT_LIVE_ASSET_REMOTE = 'ssh://xxx'
+HOARD_GIT_STATIC_GEN_REMOTE = 'ssh://xxx2'
