--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "@cloudflare/vitest-pool-workers": "^0.8.19",
     "@eslint/js": "^9.33.0",
     "@hono/node-server": "^1.18.2",
+    "@keyv/sqlite": "^4.0.6",
     "@libsql/client": "^0.15.11",
     "@libsql/isomorphic-fetch": "file:thirdparty/libsql_isomorphic-ts/isomorphic-fetch",
     "@stylistic/eslint-plugin": "^5.2.3",
@@ -88,6 +89,7 @@
     "@types/node": "^24.3.0",
     "async-await-queue": "^2.1.4",
     "async-lock": "^1.4.1",
+    "cache-sqlite-lru-ttl": "^1.0.0",
     "cross-env": "^10.1.0",
     "dotenv": "^17.2.1",
     "emittery": "^1.2.0",
@@ -104,6 +106,7 @@
     "jiti": "^2.5.1",
     "json-multi-parse": "^1.3.1",
     "jsonc-parser": "^3.3.1",
+    "keyv": "^5.5.3",
     "knex": "^3.1.0",
     "liquidjs": "^10.21.1",
     "markdown-it": "^14.1.0",
